Bug 309610 - KMail replies to wrong mail after switching tabs
Summary: KMail replies to wrong mail after switching tabs
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: UI (other bugs)
Version First Reported In: 4.9.1
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-05 21:56 UTC by Christian Boltz
Modified: 2019-09-21 14:43 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christian Boltz 2012-11-05 21:56:45 UTC
When using multiple tabs (with different folders) in KMail and replying to a mail, KMail replies to the last-selected mail even if you switched to another tab before.

Reproducible: Always

Steps to Reproduce:
1. open at least two tabs in kmail and select different folders (let's say "kde" in the first tab and "opensuse" in the second tab)
2. select the "kde" tab
3. select a mail by clicking it in the message list
4. switch to the other ("opensuse") tab
5. press "r" or click the reply button in the toolbar
Actual Results:  
The editor window contains a reply to the mail you selected in the "kde" folder before switching tabs.

Expected Results:  
The editor window should contain a reply to the currently displayed mail in the "opensuse" tab/folder.
Comment 1 Laurent Montel 2012-11-06 06:52:02 UTC
I confirm it
Comment 2 Laurent Montel 2012-11-06 08:49:52 UTC
Git commit af645f7421f711af3ad005c622236b4b61ea3aa2 by Montel Laurent.
Committed on 06/11/2012 at 09:49.
Pushed by mlaurent into branch 'KDE/4.9'.

Fix Bug 309610 - KMail replies to wrong mail after switching tabs

FIXED-IN: 4.9.4

M  +1    -0    kmail/kmmainwidget.cpp

http://commits.kde.org/kdepim/af645f7421f711af3ad005c622236b4b61ea3aa2
Comment 3 Christian Boltz 2012-12-30 14:38:56 UTC
Verified in KDE 4.9.95.

Thanks for the quick fix!