Fix Bug 309610 - KMail replies to wrong mail after switching tabs

FIXED-IN: 4.9.4
BUG: 309610