kmmainwidget.cpp
@@ -4566,6 +4566,7 @@ void KMMainWidget::itemsReceived(const Akonadi::Item::List &list )
   mMsgView->setHtmlOverride(mFolderHtmlPref);
   mMsgView->setHtmlLoadExtOverride(mFolderHtmlLoadExtPref);
   mMsgView->setDecryptMessageOverwrite( false );
+  mMsgActions->setCurrentMessage( item );
 }
 
 void KMMainWidget::itemsFetchDone( KJob *job )
